--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <section class="hero" id="home">
     <main class="content">
       <h1> Anomali Yang Sangat Cantik N <span>Lucu</span></h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      <a href="iki.html" class="cta">ulalalaaaa</a>
+      <p>Haloo gaiss kalii inii aku mau kasi tau cewe akuu hehehe.</p>
+      <a href="iki.html" class="cta">apaa inii</a>
     </main>
   </section>
   <!-- HERO SELECTION  END-->
@@ -67,11 +67,8 @@
       </div>
       <div class="content">
         <h3>kenpa sheny ?</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-          Aperiam voluptatum porro officiis dolorem dolores sed ratione
-          commodi unde asperiores.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa rem ipsa ipsum est tempora natus adipisci
-          fugit doloribus illum vero, nulla velit, veniam dolore voluptatem fuga at! Ea, eveniet non?</p>
+        <p>Dari seribu banyaknya wanita kenapa akuu pilihh sheny yaa? emm mungkin itu terjadi karna wajahnya yang cantik nan imutt YAHAHAHAY</p>
+        <p>Dan bukan cuman parasnya bagusss, sheny juga memiliki sikap layaknya bidadarii yuhuuuuu yahahahahahaaaaa</p>
       </div>
     </div>
   </section>
@@ -81,8 +78,7 @@
   <!-- MENU SECTION -->
   <section id="menu" class="menu">
     <h2><span>Sheny </span>punya siapa?</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adi pisicing elit. Distinctio similique reiciendis hic nostrum dolor odio
-      doloremque dolores voluptatum </p>
+    <p>kamuu nanyaa sheny punya siapa? omg, seriuss nihh? YAA PUNYA GUA LAKHHHAHAHAHA. </p>
 
 
     <div class="row">
@@ -124,9 +120,8 @@
 
   <!-- CONTACT SECTION  -->
   <section id="contact" class="contact">
-    <h2><span>Kontak </span>sseny</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur
-      adipisicing elit. Ea, cumque. </p>
+    <h2><span>masu</span>kan</h2>
+    <p>kalian kalau mau kirim masukan tentang website ini silahkan aja gaiss dan maps ini adalah rumah diaaa. </p>
 
 
     <div class="row">
@@ -171,7 +166,7 @@
     </div>
 
     <div class="credit">
-      <p>Created by <a href="">Muhamad Rizkt</a>. | &copy; 2024.</p>
+      <p>Created by <a href="">Muhamad Rizky</a>. | &copy; 2024.</p>
     </div>
   </footer>
 
