--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Sheny Amelia</title>
 
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,6 +14,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
     rel="stylesheet">
   <!-- fonts end -->
+
+  <!-- icon -->
+  <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
+
 
   <!-- feather icons -->
   <script src="https://unpkg.com/feather-icons"></script>
@@ -63,11 +67,12 @@
 
     <div class="row">
       <div class="about-img">
-        <img src="foto/uiii.jpg " alt="Tentang Kami">
+        <img src="foto/SENYY.jpeg " alt="Tentang Kami">
       </div>
       <div class="content">
         <h3>kenpa sheny ?</h3>
-        <p>Dari seribu banyaknya wanita kenapa akuu pilihh sheny yaa? emm mungkin itu terjadi karna wajahnya yang cantik nan imutt YAHAHAHAY</p>
+        <p>Dari seribu banyaknya wanita kenapa akuu pilihh sheny yaa? emm mungkin itu terjadi karna wajahnya yang cantik
+          nan imutt YAHAHAHAY</p>
         <p>Dan bukan cuman parasnya bagusss, sheny juga memiliki sikap layaknya bidadarii yuhuuuuu yahahahahahaaaaa</p>
       </div>
     </div>
