--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main class="content">
       <h1> Anomali Yang Sangat Cantik N <span>Lucu</span></h1>
       <p>Haloo gaiss kalii inii aku mau kasi tau cewe akuu hehehe.</p>
-      <a href="iki.html" class="cta">apaa inii</a>
+      <a href="bunga.html" class="cta">apaa inii</a>
     </main>
   </section>
   <!-- HERO SELECTION  END-->
@@ -88,6 +88,7 @@
 
     <div class="row">
       <div class="menu-card">
+        <a href=""></a>
         <img src="foto/apa-apaan2.jpg" alt="sheny" class="menu-card-foto">
         <h2 class="menu-card-title"> ini sheny yang Cantik</h2>
         <p class="menu-card-idr">muahhh</p>
