--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
     <div class="navbar-nav">
       <a href="#home">home</a>
-      <a href="#about"> Tentang Kami</a>
+      <a href="#about"> Tentang sheny>
       <a href="#menu">Menu</a>
       <a href="#contact">Kontak</a>
     </div>
 
     <div class="navbar-extra">
       <a href="#" id="search"><i data-feather="search"></i>
-        <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i>
+        <a href="#" id="shopping-cart"><i data-feather="heart"></i>
           <a href="#" id="hamburger-menu"><i data-feather="menu"></i>
           </a>
 
